Fix text size for front and back cover on small screens

--- a/src/components/stickerList/StickerList.css
+++ b/src/components/stickerList/StickerList.css
@@ -12,7 +12,6 @@
 
 .stickerList > .stickers > .sticker.disabled {
 	pointer-events: none;
-	opacity: ;
 }
 
 .stickerList .stickerListSticker {
